--- a/conf/app.ini
+++ b/conf/app.ini
@@ -13,6 +13,7 @@ WRITE_TIMEOUT = 60
 TYPE = mysql
 USER = root
 PASSWORD = 123456
-HOST = 172.18.0.2/16:3306
+# 172.18.0.2/16:3306
+HOST = 127.0.0.1:3306
 NAME = go_blog
 TABLE_PREFIX = demo_
